# rye-example

.github/workflows/: ci.yml
myproject/: README.md  pyproject.toml
myproject/src/rye_example/: __init__.py
